# xfreeze

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  configure.ac
.github/workflows/: test.yml
doc/: Makefile.am  xfreeze.1
extras/: Makefile  lock_sysrq.c  lock_vtswitch.c  xfreeze.sh
src/: Makefile.am  auth_pam.c  auth_pam.h  auth_static.c  auth_static.h  auth_unix.c  auth_unix.h  input.c  input.h  lock.c  lock.h  main.c  opt.c  opt.h  signals.c  signals.h
